--- a/style_kentico.css
+++ b/style_kentico.css
@@ -23,10 +23,16 @@ body{
   src: url(assets/fonts/GT-Walsheim-Light.woff);
   font-weight: light;
 }
-
+/* 
 @font-face {
   font-family: GT Walsheim;
   src: url(assets/fonts/GT-Walsheim-Medium.woff);
+  font-weight:normal;
+} */
+
+@font-face {
+  font-family: GT Walsheim;
+  src: url(assets/fonts/GT-Walsheim-Regular.woff);
   font-weight:normal;
 }
 
