--- a/style_kentico.css
+++ b/style_kentico.css
@@ -36,14 +36,44 @@ body{
   font-weight:normal;
 } */
 
-@font-face{font-family:"GT Walsheim";src:url("https://download.kentico.com/Assets/GT-Walsheim-Light.woff");font-weight:100;font-display:swap;font-style:normal}@font-face{font-family:"GT Walsheim";src:url("https://download.kentico.com/Assets/GT-Walsheim-Regular.woff");font-weight:400;font-display:swap;font-style:normal}@font-face{font-family:"GT Walsheim";src:url("https://download.kentico.com/Assets/GT-Walsheim-Medium.woff");font-weight:500;font-display:swap;font-style:normal}@font-face{font-family:"GT Walsheim";src:url("https://download.kentico.com/Assets/GT-Walsheim-Bold.woff");font-weight:700;font-display:swap;font-style:normal}
+@font-face{
+  font-family:"GT Walsheim";
+  src:url("https://download.kentico.com/Assets/GT-Walsheim-Light.woff");
+  font-weight:100;
+  font-display:swap;
+  font-style:normal
+}
+  
+  @font-face{
+    font-family:"GT Walsheim";
+    src:url("https://download.kentico.com/Assets/GT-Walsheim-Regular.woff");
+    font-weight:400;
+    font-display:swap;
+    font-style:normal
+  }
+    
+  @font-face{
+    font-family:"GT Walsheim";
+    src:url("https://download.kentico.com/Assets/GT-Walsheim-Medium.woff");
+    font-weight:500;
+    font-display:swap;
+    font-style:normal
+  }
+
+  @font-face{
+    font-family:"GT Walsheim";
+    src:url("https://download.kentico.com/Assets/GT-Walsheim-Bold.woff");
+    font-weight:700;
+    font-display:swap;
+    font-style:normal
+  }
 
 header h1 {
   font-family: "GT Walsheim", Helvetica, Arial, sans-serif;
 /*   font-family: 'Oracle Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif; */
   color: #000;
   font-size: 3.333rem;
-  font-weight:bold;
+  font-weight:700;
 }
 
 header p {
@@ -51,12 +81,12 @@ header p {
   margin-top:.667rem;
   font-size: 1.667rem;
   color: #020202;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .intro {
   font-size: 1.667rem;
-  font-weight: light;
+  font-weight: 100;
   line-height: 1.8;
   color: #333;
   margin-bottom: 2rem;
@@ -87,7 +117,7 @@ header p {
 
   .footnote {
     font-size: 1rem;
-    color: #300A45;
+    color: #333;
     font-weight: normal;
     font-family: "GT Walsheim", Helvetica, Arial, sans-serif;
   }
