--- a/style_kentico.css
+++ b/style_kentico.css
@@ -14,13 +14,13 @@ body{
 
 /* @font-face {
   font-family: GT Walsheim;
-  src: url(https://download.kentico.com/Assets/GT-Walsheim-Bold.woff);
+  src: url(assets/fonts/GT-Walsheim-Bold.woff);
   font-weight: bold;
 }
 
 @font-face {
   font-family: GT Walsheim;
-  src: url(https://download.kentico.com/Assets/GT-Walsheim-Light.woff);
+  src: url(assets/fonts/GT-Walsheim-Light.woff);
   font-weight: light; 
 }*/
 /* 
@@ -32,13 +32,13 @@ body{
 /* 
 @font-face {
   font-family: GT Walsheim;
-  src: url(https://download.kentico.com/Assets/GT-Walsheim-Regular.woff);
+  src: url(assets/fonts/GT-Walsheim-Regular.woff);
   font-weight:normal;
 } */
 
 @font-face{
   font-family:"GT Walsheim";
-  src:url("https://download.kentico.com/Assets/GT-Walsheim-Light.woff");
+  src:url("assets/fonts/GT-Walsheim-Light.woff");
   font-weight:100;
   font-display:swap;
   font-style:normal
@@ -46,7 +46,7 @@ body{
   
   @font-face{
     font-family:"GT Walsheim";
-    src:url("https://download.kentico.com/Assets/GT-Walsheim-Regular.woff");
+    src:url("assets/fonts/GT-Walsheim-Regular.woff");
     font-weight:400;
     font-display:swap;
     font-style:normal
@@ -54,7 +54,7 @@ body{
     
   @font-face{
     font-family:"GT Walsheim";
-    src:url("https://download.kentico.com/Assets/GT-Walsheim-Medium.woff");
+    src:url("assets/fonts/GT-Walsheim-Medium.woff");
     font-weight:500;
     font-display:swap;
     font-style:normal
@@ -62,7 +62,7 @@ body{
 
   @font-face{
     font-family:"GT Walsheim";
-    src:url("https://download.kentico.com/Assets/GT-Walsheim-Bold.woff");
+    src:url("assets/fonts/GT-Walsheim-Bold.woff");
     font-weight:700;
     font-display:swap;
     font-style:normal
@@ -86,6 +86,7 @@ header p {
 
 .intro {
   font-size: 1.667rem;
+  font-family: "GT Walsheim", Helvetica, Arial, sans-serif;
   font-weight: 100;
   line-height: 1.8;
   color: #333;
