--- a/style_kentico.css
+++ b/style_kentico.css
@@ -1,8 +1,10 @@
 /* kentico.html specific */
 
 body{
- /*  background-color: #e0f3ff; */
-/*   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif; */
+  font-family: "Onest", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
   color:#000;
 }
 
@@ -36,62 +38,26 @@ body{
   font-weight:normal;
 } */
 
-@font-face{
-  font-family:"GT Walsheim";
-  src:url("assets/fonts/GT-Walsheim-Light.woff");
-  font-weight:100;
-  font-display:swap;
-  font-style:normal
-}
-  
-  @font-face{
-    font-family:"GT Walsheim";
-    src:url("assets/fonts/GT-Walsheim-Regular.woff");
-    font-weight:400;
-    font-display:swap;
-    font-style:normal
-  }
-    
-  @font-face{
-    font-family:"GT Walsheim";
-    src:url("assets/fonts/GT-Walsheim-Medium.woff");
-    font-weight:500;
-    font-display:swap;
-    font-style:normal
-  }
-
-  @font-face{
-    font-family:"GT Walsheim";
-    src:url("assets/fonts/GT-Walsheim-Bold.woff");
-    font-weight:700;
-    font-display:swap;
-    font-style:normal
-  }
-
 header h1 {
-  font-family: "GT Walsheim", Helvetica, Arial, sans-serif;
-/*   font-family: 'Oracle Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif; */
+  font-weight: 800;
   color: #000;
   font-size: 3.333rem;
-  font-weight:700;
 }
 
 header p {
-  font-family: "GT Walsheim", Helvetica, Arial, sans-serif;
+  font-weight: 800;
   margin-top:.667rem;
   font-size: 1.667rem;
   color: #020202;
-  font-weight: 700;
 }
 
 .intro {
-  font-size: 1.667rem;
-  font-family: "GT Walsheim", Helvetica, Arial, sans-serif;
-  font-weight: 100;
+  font-weight: 500;
   line-height: 1.8;
   color: #333;
   margin-bottom: 2rem;
   max-width: 65ch;
+  font-size: 1.333rem;
 }
 
 
@@ -112,15 +78,13 @@ header p {
 
 
   .progress-box strong {
-    font-family: "GT Walsheim", Helvetica, Arial, sans-serif;
     font-size: 1.667rem;
+    font-weight: 800;
   }
 
   .footnote {
     font-size: 1rem;
     color: #333;
-    font-weight: normal;
-    font-family: "GT Walsheim", Helvetica, Arial, sans-serif;
   }
 
 /*   .progress-box li::marker {
